--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.0.1/dist/leaflet.css" />
     <link rel="stylesheet" href="node_modules/react-select/dist/react-select.css" />
     <link rel="stylesheet" href="node_modules/leaflet-draw/dist/leaflet.draw.css" />
+    <link rel="stylesheet" href="node_modules/react-big-calendar/lib/css/react-big-calendar.css" />
 
+    <script src="https://storage.googleapis.com/code.getmdl.io/1.0.0/material.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
     <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
     <!-- endbuild -->
